--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
-@import "./dark.scss";
-@import "./element.scss";
-@import "./layout.scss";
-@import "./theme.scss";
-@import "./variables.scss";
+@use "./dark.scss";
+@use "./element.scss";
+@use "./layout.scss";
+@use "./theme.scss";
+@use "./variables.scss";
