--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -11,7 +11,8 @@ body,
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: 'Helvetica Neue', Helvetica, 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei', '微软雅黑', Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
+    "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: transparent;
@@ -50,7 +51,7 @@ a:hover {
       overflow: hidden;
     }
     &.aside-expend {
-      width: var(--theme-aside-width) !important;
+      width: var(--theme-aside-width);
       transition: width 0.3s ease;
     }
     &.aside-compress {
@@ -70,7 +71,7 @@ a:hover {
     overflow: hidden;
     width: 100%;
     background-color: var(--theme-main-bg-color);
-    .layout-card{
+    .layout-card {
       min-height: calc(100vh - 70px - var(--theme-header-height));
     }
   }
